$Id: History,v 1.185 2002-04-22 14:28:13 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

22nd April 2002  John Allison
- Corrected out of date advice about /vis/set/culling, etc.
- Workaround for pseudo-parallel/orthogonal projection in Ray Tracer.

28th February 2002  John Allison (vis-V04-00-03)
- Updated OpenGL to compile (but not run) on Windows (opengl-V04-00-01).
- Removed redundant code in GNUmakefiles in OPACS, OpenGL, OpenInventor, VRML.
- Improved README.adding_graphics_system.

23rd February 2002  John Allison (vis-V04-00-02)
- Bug fix in modeling, which was causing nested calls to Begin/EndPrimitives.

4th February 2002  Joseph Perl  (vis-V04-00-01)
- HepRep: Check for missing hierarchy layers in HepRepXMLWriter.
  (Not strictly needed since have a culled layer check in SceneHandler,
  but may be useful in other applications of HepRepXMLWriter).

3rd February 2002  Joseph Perl